# claude_code_sdk_example

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  claude_code_sdk.ipynb  doctor.sh  dry_run.sh  pyproject.toml  setup_env.sh
.claude/: settings.json
docs/: README.md  project-preferences.md
python-dev-env/: main.py  pyproject.toml  setup.sh
