[project]
name = "python-dev-env"
version = "0.1.0"
description = "Python development environment with Claude Code SDK, Jupyter, and useful packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Claude Code SDK
    "anthropic>=0.25.0",
    # Jupyter and data science
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    # Development tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.3.0",
    # Utility libraries
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "click>=8.1.0",
    # Data processing
    "polars>=0.18.0",
    "pyarrow>=12.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    # Machine learning extras
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasets>=2.13.0",
    "claude-code-sdk>=0.0.20",
    "anyio>=4.10.0",
]
